server/pages/files/css/styles.css
body {
    background-image: url("../img/2.png"), url("../img/bg3-dots.png");
    background-position: 50% 0;
    background-repeat: repeat, repeat;
}

/*///////////////////////MENU/////////////////////////////*/
#menu, #menu404  {
    margin: 0;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    list-style-type: none;
    background-color: rgba(0, 0, 0, 0.5);
    transition: transform 0.3s;
}

#menu:hover, #menu404:hover {
    transform: translate(0, 0);
    transition: transform 0.3s;
}

#menu li {
    text-align: center;
    margin: 0 13%;
    font-family: "Segoe UI Light", monospace;
    font-size: 30px;
    min-width: 23.7%;
    background-color: #9AAAE2;
    display: inline-block;
    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
    transition: box-shadow 0.3s;
}

#menu404 li {
    margin: 0 36%;
    background-color: #9AAAE2;
    font-family: "Segoe UI Light", monospace;
    font-size: 30px;
    min-width: 23.7%;
    display: inline-block;
    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
    transition: box-shadow 0.3s;
}

#menu li:hover, #menu404 li:hover {
    background-color: #9D70CA;
    box-shadow: inset 10px 10px 0 rgba(0, 0, 0, 0.3);
    transition: box-shadow 0.3s;
}

#menu li a, .dd, #menu404 li a {
    display: block;
    color: white;
    text-align: center;
    text-decoration: none;
}

#menu li.dd-menu {
    display: inline-block;
}

#menu .dd-content {
    z-index: -9;
    position: absolute;
    background-color: #D395EC;
    min-width: 220px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
    opacity: 0;
    transition: opacity 0.5s;
}

#menu .dd-menu:hover .dd-content {
    z-index: 10;
    opacity: 1;
    transition: opacity 0.5s;
}

#menu .dd-content a {
    font-size: 20px;
    background-color: #DDBBFF;
    transition: font-size 0.3s;
}

#menu .dd-content a:hover {
    font-size: 25px;
    background-color: #C78EFF;
    transition: font-size 0.3s;
}

/*///////////////////////HEADERS/////////////////////////////*/
h1, h2, h3, h4, h5, h6 {
    text-align: center;
    color: white;
    font-family: "Segoe UI Light", monospace;
}

.sHeader, .sHeader404 {
    color: #FC3DFA;
    font-family: "Segoe UI Light", monospace;
    font-style: italic;
    font-size: 20px;
    text-align: center;
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
    margin: 90px 250px 30px 250px;
    background-color: rgba(78, 0, 107, 0.5);
    border-style: solid;
    border-color: #AE00F0;
    border-radius: 0 50px;
    border-width: 2px;
    transition: color 0.5s, border-radius 0.3s ease-in-out, box-shadow 0.5s;
}

.sHeader404 {
    font-size: 35px;
}

.sHeader:hover, #footer:hover, .sHeader404:hover {
    color: white;
    border-radius: 50px 0;
    box-shadow: 60px 10px 5px rgba(0, 0, 0, 0.05), 0 0 30px 10px #AEAAF0;
    border-color: #AEAAF0;
    transition: color 0.5s, border-radius 0.5s, box-shadow 0.1s;
}

div {
    text-align: center;
}

#valid {
    display: inline;
}

/*///////////////////////////////////////LIST/////////////////////////////*/
#lst {
    font-family: "Segoe UI Light", monospace;
    font-size: 20px;
    background-color: blue;
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0.2);
    padding: 2px 10px 20px 40px;
    margin: 90px;
    border-style: solid;

    border-color: rgba(255, 255, 255, 0.3);
}

#lst .li1 {
    text-align: center;
    margin: 10px;
    background-color: rgba(0, 0, 0, 0.2);
    min-width: 200px;
    border-color: gray;
    border-style: solid;
    border-width: 1px;
    color: gray;
    transition: color 0.5s, border-color 0.5s;
}

#lst .li1:hover {
    color: white;
    padding-left: 40px;
    border-color: blue;
    transform: scale(1.1);
    transition: color 0.5s, border-color 0.5s, transform 0.3s;
}

#lst .li2 {
    text-align: center;
    margin-left: 50px;
    background-color: rgba(0, 0, 0, 0.2);
    min-width: 200px;
    border-color: gray;
    border-style: solid;
    border-width: 1px;
    color: gray;
    transition: color 0.5s, border-color 0.5s;
}

#lst .li2:hover {
    color: white;
    border-color: white;
    transition: color 0.5s, border-color 0.5s;
}

/*///////////////////////////////////////TABLE/////////////////////////////*/

#tb {
    margin: auto;
    border: 1px;
    border-spacing: 10px;
    transition: all 0.3s;
}

#tb:hover {
    background-color: rgba(255, 255, 255, 0.1);
    font-family: "Segoe UI Light", monospace;
    border-style: none;
    border-radius: 0 30px;
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
}

#tb td {
    background-color: rgba(0, 0, 0, 0.2);
    font-size: 50px;
    border-style: none;
    border-radius: 5px;
    transition: box-shadow 2s, background-color 4s;
    z-index: 1;
}

#tb td:hover {
    box-shadow: 0 0 30px 10px white;
    background-color: white;
    transition: box-shadow 0.5s, background-color 0.3s;
}

#tb td:active {
    box-shadow: 0 0 30px 10px #AEAAF0;
    background-color: #AEAAF0;
    transition: box-shadow 0s, background-color 0s;
}

#tb .cright {
    border-radius: 5px 20px 5px 5px;
}

#tb .cleft {
    border-radius: 5px 5px 5px 20px;
}

/*///////////////////////IMAGE /////////////////////////////*/
img {
    border-radius: 30px;
    border-style: solid;
    border-width: 2px;
    border-color: silver;
    box-shadow: inset 0 20px 1px rgba(0, 0, 0, 0.6);
    opacity: 0.5;
    width: 800px;
    height: 500px;
}

#ddImg {
    width: 800px;
    height: 450px;
    margin: auto;
    display: block;
    transition: all 0.5s;
}

#ddImg:hover {
    display: none;
    transition: all 0.5s;
}

#fCSS, #fHTML {
    position: relative;
    width: 80px;
    height: 60px;
}

/*/////////////////////// FOOTER /////////////////////////////*/
#footer {
    color: #FC3DFA;
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
    background-color: rgba(78, 0, 107, 0.5);
    border-style: solid;
    border-color: #AE00F0;
    border-radius: 0 50px;
    transition: color 0.5s, border-radius 0.3s ease-in-out, box-shadow 0.5s;
}

